chore: removing config endpoint and passing data as config
